# fastapi-docs-copilot

./: .env.example  .gitignore  README.md  indexing.py  langgraph.json  main.py  middleware.py  pyproject.toml  rag.py  test_load_and_chunking.py  vecter_store.py
faiss_index/: index.faiss  index.pkl
src/: agent.py  components.py  constants.py  indexing.py  middleware.py  rag.py  test_load_and_chunking.py  tools.py  vector_store.py
