[project]
name = "fastapi-docs-copilot"
version = "0.1.0"
description = "Copilot for fastapi docs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.128.0",
    "ipykernel>=7.1.0",
    "jupyterlab>=4.5.1",
    "langchain>=1.2.0",
    "langchain-anthropic>=1.3.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.5",
    "langchain-google-genai>=4.1.2",
    "langchain-huggingface>=1.2.0",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-model-profiles>=0.0.5",
    "langchain-openai>=1.1.6",
    "langchain-tavily>=0.2.16",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=1.0.5",
    "langgraph-cli[inmem]>=0.4.11",
    "langsmith>=0.5.2",
    "markdown>=3.10",
    "mcp>=1.25.0",
    "pypdf>=6.5.0",
    "sentence-transformers>=5.2.0",
    "tavily>=1.1.0",
    "tavily-python>=0.7.17",
    "unstructured>=0.18.24",
]
